--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 layout: default
 ---
 {% include hero.html %}
+{% include buttons.html %}
 
 <div class="container">
 	<div class="row">
 		<div class="col col-12">
 			{% if site.posts.size > 0 %}
-				<h4 class="lates-title">Latest Posts</h4>
+				<h4 class="lates-title">Ultimas noticias</h4>
 			{% endif %}
 		</div>
 	</div>
